--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,19 @@ version: '3.6'
 services:
   ollama:
     # Uncomment below for GPU support
-    # deploy:
-    #   resources:
-    #     reservations:
-    #       devices:
-    #         - driver: nvidia
-    #           count: 1
-    #           capabilities:
-    #             - gpu
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: 1
+              capabilities:
+                - gpu
     volumes:
-      - ollama:/root/.ollama
+      - /mnt/d/model_data:/root/.ollama
     # Uncomment below to expose Ollama API outside the container stack
-    # ports:
-    #   - 11434:11434
+    ports:
+      - 11434:11434
     container_name: ollama
     pull_policy: always
     tty: true
@@ -31,7 +31,7 @@ services:
   #   # Make sure to change the username/password!
   #   environment:
   #     MONGO_INITDB_ROOT_USERNAME: root
-  #     MONGO_INITDB_ROOT_PASSWORD: example
+  #     MONGO_INITDB_ROOT_PASSWORD: Blast77
 
   ollama-webui:
     build:
@@ -51,11 +51,8 @@ services:
       - "OLLAMA_API_BASE_URL=http://ollama:11434/api"
       # Uncomment below for WIP: Auth support
       # - "WEBUI_AUTH=TRUE"
-      # - "WEBUI_DB_URL=mongodb://root:example@ollama-webui-db:27017/"
-      # - "WEBUI_JWT_SECRET_KEY=SECRET_KEY"
+      # - "WEBUI_DB_URL=mongodb://root:Blast77@ollama-webui-db:27017/"
+      # - "WEBUI_JWT_SECRET_KEY=Blast77"
     extra_hosts:
       - host.docker.internal:host-gateway
     restart: unless-stopped
-
-volumes:
-  ollama: {}
